--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,60 +2,72 @@
 @import "../../sass/variables.scss";
 .navBar {
   position: fixed;
-  top: 35%;
-  left: 3%;
+  top: auto;
+  bottom: 3%;
+  left: 50%;
+  width: 70%;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: $color-grey;
   border-radius: 3rem;
-  animation: fade-nav-in 1s ease-in-out forwards;
+  animation: fade-navPhone-in 1s ease-in-out forwards;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  @include respond(phone) {
-    top: auto;
-    bottom: 3%;
-    left: 50%;
-    width: 80%;
-    animation: fade-navPhone-in 1s ease-in-out forwards;
-  }
-}
-.navBar__title-links {
-  padding: 15px 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 15px;
-  @include respond(phone) {
-    padding: 8px 10px;
-    flex-direction: row;
-    justify-content: space-between;
+  @include respondMobileFirst(phone) {
+    top: 35%;
+    left: 3%;
+    width: auto;
+    bottom: auto;
+    animation: fade-nav-in 1s ease-in-out forwards;
   }
 }
 
+.navBar__ul {
+  display: flex;
+  padding: 8px 8px;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 15px;
+  @include respondMobileFirst(phone) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 10px;
+  }
+}
+.navBar__li {
+  a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    i {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
 .icon {
   font-size: 4rem;
+  font-weight: bold;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.377);
-  padding: 5px;
+  background-color: $color-blue;
+  padding: 3px;
   transition: fill 0.1s ease-in-out;
-  fill: rgb(209, 217, 252);
+  fill: $white-color;
   border: 2px solid transparent;
-  @include respond(phone) {
-    font-size: 4rem;
-  }
   &:hover {
-    fill: rgba(88, 117, 248, 0.2);
-    border: 2px solid rgba(88, 117, 248, 0.2);
+    fill: $color-blue;
+    background-color: $white-color;
+    border: 2px solid $color-blue;
   }
 }
-.icon.active-nav {
-  fill: rgb(88, 117, 248);
-  border: 2px solid rgb(88, 117, 248);
-  &:hover {
-    fill: rgb(88, 117, 248);
-    border: 2px solid rgba(88, 117, 248);
-  }
+.active .icon {
+  fill: $color-blue;
+  background-color: $white-color;
+  border: 2px solid $color-blue;
 }
+
 @keyframes fade-nav-in {
   0% {
     opacity: 0;
