--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -53,3 +53,35 @@ only screen is to avoid media queries are applied in case of printing for exampl
     }
   }
 }
+@mixin respondMobileFirst($breakpoint) {
+  @if $breakpoint == lilphone {
+    @media only screen and (min-width: 30em) {
+      // 400px
+      @content;
+    }
+  }
+  @if $breakpoint == phone {
+    @media only screen and (min-width: 37.5em) {
+      // 600px
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    @media only screen and (min-width: 56.25em) {
+      // 900px
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media only screen and (min-width: 75em) {
+      // 1200px
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media only screen and (min-width: 112.5em) {
+      // 1800px
+      @content;
+    }
+  }
+}
