change some styles in desktop env

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,9 @@
 @import "./sass/variables";
 @import "animate.css";
 .App {
-  padding: 5% 10%;
+  padding: 5% 5% 30% 5%;
   position: relative;
-  @include respond(phone) {
-    padding: 5% 5% 30% 5%;
+  @include respondMobileFirst(phone) {
+    padding: 3% 10%;
   }
 }
