--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,4 +1,6 @@
 @import "../../sass/variables.scss";
+@import "../../sass/mixins.scss";
+
 .about {
   width: 100%;
   height: 100%;
@@ -7,7 +9,8 @@
   border-bottom: 1px solid $color-blue;
   padding: 2rem;
   border-radius: 2rem 2rem 0 0;
-  margin-top: 10%;
+  margin-top: 3%;
+
   h2 {
     color: #fff;
     font-family: $font-secondary;
