--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,19 +13,20 @@ a {
 }
 html {
   box-sizing: border-box;
-  font-size: 62.5%; /* root font-size to rem - correspond to 10px but not in px to authorize user to change default font size of his browser - 1rem = 10px; 10px/16px = 62.5% - 16px default size browser font*/
+  font-size: 50%; // 1rem = 8px; 8/16 = 50%
+  /* root font-size to rem - correspond to 8px but not in px to authorize user to change default font size of his browser - 1rem = 10px; 10px/16px = 62.5% - 16px default size browser font*/
   scroll-behavior: smooth;
-  @include respond(tab-land) {
-    // width < 1200 ?
-    font-size: 56.25%; // 1rem = 9px; 9/16 = 56.25%
+  @include respondMobileFirst(tab-port) {
+    // width > 900 ?
+    // 1rem = 9px; 9/16 = 56.25%
+    font-size: 56.25%;
   }
-
-  @include respond(tab-port) {
-    // width < 900 ?
-    font-size: 50%; // 1rem = 8px; 8/16 = 50%
+  @include respondMobileFirst(tab-land) {
+    // width  > 1200 ?
+    // 1rem = 10px; 10/16 = 62.5%;
+    font-size: 62.5%;
   }
-
-  @include respond(big-desktop) {
+  @include respondMobileFirst(big-desktop) {
     // width > 1800 ?
     font-size: 75%; // 1rem = 12px; 12/16 = 75%
   }
