--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,12 @@
 .App {
   padding: 5% 5% 30% 5%;
   position: relative;
+  max-width: 140rem;
+  margin: auto;
   @include respondMobileFirst(phone) {
+    padding: 3% 4%;
+  }
+  @include respondMobileFirst(tab-port) {
     padding: 3% 10%;
   }
 }
