--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -1,20 +1,20 @@
 @import "../../sass/variables.scss";
 .work__item {
-  background-color: #131319;
+  background-color: $color-lightBlue;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
-  border-bottom: 1px solid $color-blue;
-  border-radius: 0.5rem 0.5rem 0 0;
+  border-radius: 0.5rem;
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 .work__image {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 230px;
+  height: 200px;
   background-color: #fff;
   position: relative;
   border-radius: 0.5rem;
@@ -29,7 +29,7 @@
   gap: 1rem;
   margin-top: 1rem;
 }
-.tag__tag {
+.tag__item {
   display: inline-block;
   background-color: $color-blue;
   padding: 0.4rem 1rem;
@@ -77,7 +77,7 @@
 .work__info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 1rem;
   color: $white-color;
   font-size: 1.9rem;
@@ -87,6 +87,6 @@
   font-size: 2.1rem;
   color: $color-blue;
 }
-.work__description {
+.info__description {
   margin-top: 1rem;
 }
