--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -2,25 +2,77 @@
 @import "../../sass/mixins.scss";
 
 .about {
-  width: 100%;
-  height: 100%;
-  background-color: #131319;
-  box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
-  border-bottom: 1px solid $color-blue;
-  padding: 2rem;
-  border-radius: 2rem 2rem 0 0;
-  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  animation: fade-in 0.3s ease-in-out forwards;
+  justify-content: space-between;
+  margin-top: 5rem;
+  align-items: center;
+  @include respondMobileFirst(phone) {
+    flex-direction: row;
+  }
+}
+.about__descOfMe {
+  font-size: 3rem;
+}
+.descOfMe__whoIAm {
+  margin-bottom: 1.5rem;
+  color: $color-green;
+  > p {
+    margin-bottom: 1.5rem;
+  }
+}
+.whoIAm__name {
+  font-size: 4.5rem;
+  font-weight: 700;
+  line-height: 5rem;
+}
+.about__jobDesc {
+  margin-bottom: 1.5rem;
+  display: flex;
+  gap: 1rem;
+}
+.about__img {
+  max-width: 300px;
+  border-radius: 20px;
+  align-self: center;
+  order: -1;
+  margin-bottom: 2rem;
+  @include respondMobileFirst(phone) {
+    order: 1;
+  }
+}
+.whoIam__job {
+  color: $white-color;
+  font-size: 2rem;
+}
+.socials--list {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 2rem;
 
-  h2 {
-    color: #fff;
-    font-family: $font-secondary;
-    font-weight: 700;
-    margin: 1.5rem 0;
+  @include respondMobileFirst(phone) {
+    margin-top: 3rem;
   }
-  p {
-    line-height: 3rem;
-  }
-  span {
+  li {
+    background-color: $color-green;
+    padding: 0.7rem 1rem;
+    border-radius: 12px;
     color: $color-blue;
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+      opacity: 0.9;
+      transform: scale(0.9);
+    }
+  }
+  a {
+    display: flex;
+    align-items: center;
+    color: white;
+    svg {
+      margin-right: 0.5rem;
+    }
   }
 }
