--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -43,7 +43,7 @@ body {
   font-weight: $font-weight-regular;
   line-height: $font-line-height-body;
   font-size: $font-size-body;
-  background-color: rgb(2, 2, 26);
+  background-color: #3a4fcf;
   color: $white-color;
   margin: 0;
   min-height: 100vh;
