--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,15 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Montserrat:wght@400;700&display=swap");
 
 // PRIMARY COLORS
-$white-color: #ffffff;
+$white-color: #f5f0f6;
 $primary-color: rgb(82, 188, 250);
 $secondary-color: rgba(82, 188, 250, 0.445);
 $third-color: rgb(172, 17, 233);
 $four-color: rgba(172, 17, 233, 0.274);
-$four-colorFull: rgb(30%, 4%, 61%);
+$four-colorFull: #3a4fcf;
 $dark-grey: #000000;
 $color-grey: #f3f3f3;
-$color-blue: #3a4fcf;
+//test colors
+$color-blue: #2745c2;
+$color-green: #4fb0c6;
+$color-lightBlue: #4fb0c6;
+$color-blueTiffany: #e9c46a;
 // BORDERS
 $white-border-thin: 1px solid $white-color;
 $white-border-large: 3px solid $white-color;
