changed styled work items

--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -17,7 +17,7 @@
 }
 .descOfMe__whoIAm {
   margin-bottom: 1.5rem;
-  color: $color-green;
+  color: $color-blueTiffany;
   > p {
     margin-bottom: 1.5rem;
   }
@@ -55,7 +55,7 @@
     margin-top: 3rem;
   }
   li {
-    background-color: $color-green;
+    background-color: $color-blue;
     padding: 0.7rem 1rem;
     border-radius: 12px;
     color: $color-blue;
