--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,7 +13,7 @@ $color-grey: #f3f3f3;
 $color-blue: #2745c2;
 $color-green: #4fb0c6;
 $color-lightBlue: #4fb0c6;
-$color-blueTiffany: #e9c46a;
+$color-blueTiffany: #333232;
 // BORDERS
 $white-border-thin: 1px solid $white-color;
 $white-border-large: 3px solid $white-color;
