--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -1,6 +1,6 @@
 @import "../../sass/variables.scss";
 .work__item {
-  background-color: $color-lightBlue;
+  background-color: $color-blueTiffany;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
   border-radius: 0.5rem;
   padding: 1.5rem;
