--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Montserrat:wght@400;700&display=swap");
-
 // PRIMARY COLORS
 $white-color: #f5f0f6;
 $primary-color: rgb(82, 188, 250);
@@ -14,6 +12,8 @@ $color-blue: #2745c2;
 $color-green: #4fb0c6;
 $color-lightBlue: #4fb0c6;
 $color-blueTiffany: #333232;
+$color-bodyBg: #d5c7bc;
+
 // BORDERS
 $white-border-thin: 1px solid $white-color;
 $white-border-large: 3px solid $white-color;
@@ -24,8 +24,10 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 
 // FONT FAMILY
-$font-primary: "Inter", sans-serif;
-$font-secondary: "Montserrat", sans-serif;
+// $font-primary: "Inter", sans-serif;
+// $font-secondary: "Montserrat", sans-serif;
+$font-primary: "Montserrat", sans-serif;
+$font-secondary: "Inter", sans-serif;
 // FONTS SIZE
 $font-heading-1: 4rem;
 $font-heading-2: 2.5rem;
