--- a/src/App.scss
+++ b/src/App.scss
@@ -2,14 +2,15 @@
 @import "./sass/variables";
 @import "animate.css";
 .App {
-  padding: 5% 5% 30% 5%;
+  padding: 5% 3% 0 3%;
+  // margin: 10rem auto auto 0;
   position: relative;
   max-width: 140rem;
   margin: auto;
   @include respondMobileFirst(phone) {
-    padding: 3% 4%;
+    // padding: 3% 4%;
   }
   @include respondMobileFirst(tab-port) {
-    padding: 3% 10%;
+    // padding: 3% 10%;
   }
 }
