--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -9,6 +9,10 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  // width: 325px;
+  // @include respondMobileFirst(tab-port) {
+  //   width: 450px;
+  // }
 }
 .work__image {
   display: flex;
@@ -18,6 +22,9 @@
   height: 200px;
   position: relative;
   border-radius: 0.5rem;
+  @media only screen and (min-width: 1000px) {
+    height: auto;
+  }
   img {
     border-radius: 0.5rem;
     object-fit: cover;
