--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -1,12 +1,17 @@
 @import "../../sass/variables.scss";
+@import "../../sass/mixins.scss";
 .work {
   margin: 5rem 0 1.5rem 0;
+  padding-top: 2rem;
+  border-top: 2px solid $color-blue;
 }
 .work__title {
   font-size: 3rem;
   font-weight: 700;
   margin: 0 auto;
   text-align: center;
+  padding-bottom: 2rem;
+
   span {
     color: $color-blue;
   }
@@ -21,10 +26,13 @@
 .work__container {
   display: grid;
   justify-content: space-around;
-  grid-template-columns: repeat(auto-fill, 320px);
+  grid-template-columns: repeat(auto-fill, 325px);
   gap: 3rem;
   border-radius: 2rem;
   margin-top: 2rem;
+  @media only screen and (min-width: 1000px) {
+    grid-template-columns: repeat(auto-fill, 451px);
+  }
 }
 .work--category.activeItem {
   background-color: $four-color;
