added and changed style skills

--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -22,9 +22,10 @@
   }
 }
 .welcome__portfolio {
-  font-size: 8rem;
+  font-size: 10rem;
   font-weight: 700;
   line-height: 5rem;
+  margin-top: 3rem;
   font-family: $font-secondary;
 }
 .welcome__jobDesc {
