--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -1,9 +1,9 @@
 @import "../../sass/variables.scss";
 @import "../../sass/mixins.scss";
 .work {
-  margin: 5rem 0 1.5rem 0;
+  margin: 10rem 0 1.5rem 0;
   padding-top: 2rem;
-  border-top: 2px solid $color-blue;
+  // border-top: 2px solid $color-blue;
 }
 .work__title {
   font-size: 3rem;
