--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -5,7 +5,9 @@
   align-items: center;
   flex-direction: column;
   margin: 0 0 auto 0;
-  margin-top: 5rem;
+  margin-top: 10rem;
+  // border-top: 2px solid $color-blue;
+  padding-top: 2rem;
 }
 .skills__span {
   font-style: italic;
@@ -14,7 +16,9 @@
 }
 .skills__container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
+  // display: flex;
+  // flex-wrap: wrap;
   justify-content: space-between;
   gap: 3rem;
   border-radius: 2rem;
@@ -36,9 +40,8 @@
   margin: 1.5rem;
   padding: 1.5rem;
   transition: all 0.3s ease;
-  background-color: $color-blueTiffany;
+  background-color: $white-color;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
-  border-bottom: 1px solid $color-blue;
   border-radius: 1rem;
   div {
     display: flex;
@@ -56,7 +59,7 @@
 }
 
 .item__name {
-  color: $white-color;
   font-weight: 700;
   margin-top: 1rem;
+  color: $color-blue;
 }
