--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -102,3 +102,19 @@
   margin-top: 1rem;
   color: $dark-grey;
 }
+.work__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  a {
+    color: $color-blue;
+    font-size: 3.5rem;
+    padding: 0 1rem;
+  }
+}
+.work__phone__links {
+  @include respondMobileFirst(phone) {
+    display: none;
+  }
+}
