--- a/src/container/NotFound/NotFound.scss
+++ b/src/container/NotFound/NotFound.scss
@@ -3,7 +3,7 @@
 
 .error__container {
   width: 100%;
-  color: $primary-color;
+  color: $color-blue;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +24,7 @@
 }
 .error__back {
   border: 0;
-  color: $primary-color;
+  color: $color-blue;
   font-size: 1.8rem;
   font-weight: 500;
   text-decoration: underline;
