--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,10 +5,9 @@ $dark-grey: #000000;
 $color-grey: #f3f3f3;
 //test colors
 $color-blue: #2745c2;
-$color-green: #4fb0c6;
-$color-lightBlue: #4fb0c6;
-$color-blueTiffany: #333232;
-$color-bodyBg: #d5c7bc;
+// $color-bodyBg: #edd3c4;
+$color-bodyBg: #f2d0a9;
+$color-tertiary: #f24236;
 
 // BORDERS
 $white-border-thin: 1px solid $white-color;
