--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -14,6 +14,7 @@
 }
 .about__text {
   margin-top: 2.5rem;
+  line-height: 3rem;
 }
 .about__welcome {
   font-size: 3rem;
@@ -21,6 +22,7 @@
 }
 .welcome {
   margin-bottom: 1.5rem;
+  color: $color-tertiary;
   > p {
     margin-bottom: 1.5rem;
   }
@@ -59,7 +61,7 @@
 }
 .about__img {
   border-radius: 50%;
-  height: 90%;
+  height: 80%;
 }
 
 .whoIam__job {
@@ -75,10 +77,9 @@
     margin-top: 3rem;
   }
   li {
-    background-color: $color-blue;
+    background-color: $color-tertiary;
     padding: 0.7rem 1rem;
     border-radius: 12px;
-    color: $color-blue;
     font-size: 1.5rem;
     font-weight: 700;
     transition: all 0.2s ease-in-out;
@@ -95,4 +96,7 @@
       margin-right: 0.5rem;
     }
   }
+}
+.align-end {
+  align-self: flex-end;
 }
