--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -17,9 +17,8 @@
 .skills__container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
-  // display: flex;
-  // flex-wrap: wrap;
   justify-content: space-between;
+  align-content: center;
   gap: 3rem;
   border-radius: 2rem;
   padding: 2rem;
@@ -37,12 +36,14 @@
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 1.5rem;
+  margin: 1.5rem auto;
   padding: 1.5rem;
   transition: all 0.3s ease;
   background-color: $white-color;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
   border-radius: 1rem;
+  max-width: 185px;
+  min-width: 158px;
   div {
     display: flex;
     align-items: center;
