--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -95,7 +95,7 @@
   z-index: 1050;
   overflow: hidden;
   outline: 0;
-  background-color: $color-tertiary;
+  background-color: $color-bodyBg;
   color: $white-color;
   font-size: 3rem;
   display: flex;
