--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -54,7 +54,6 @@
   overflow: hidden;
   width: 300px;
   height: 300px;
-  background-color: $color-blue;
   @media only screen and (min-width: 700px) {
     order: 1;
   }
@@ -62,6 +61,10 @@
 .about__img {
   border-radius: 50%;
   height: 80%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: center;
+  background-color: $color-blue;
 }
 
 .whoIam__job {
@@ -96,7 +99,4 @@
       margin-right: 0.5rem;
     }
   }
-}
-.align-end {
-  align-self: flex-end;
 }
