--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -100,6 +100,9 @@
   font-size: 3rem;
   display: flex;
   justify-content: center;
+  @include respondMobileFirst(phone) {
+    display: none;
+  }
 }
 .burger--item {
   padding: 1.5rem;
@@ -123,5 +126,5 @@
   background-color: white;
 }
 .align-end {
-  align-items: flex-end;
+  align-self: flex-end;
 }
