--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -1,7 +1,8 @@
 @import "../../sass/variables.scss";
 @import "../../sass/mixins.scss";
 .work__item {
-  background-color: $white-color;
+  // background-color: $white-color;
+  background-color: #fff;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
   border-radius: 0.5rem;
   padding: 1.5rem;
@@ -9,10 +10,6 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  // width: 325px;
-  // @include respondMobileFirst(tab-port) {
-  //   width: 450px;
-  // }
 }
 .work__image {
   display: flex;
