--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -39,7 +39,7 @@
   margin: 1.5rem auto;
   padding: 1.5rem;
   transition: all 0.3s ease;
-  background-color: $white-color;
+  background-color: #fff;
   box-shadow: 0px 0px 20px -5px rgb(0 0 0 / 75%);
   border-radius: 1rem;
   max-width: 185px;
