--- a/src/components/Mywork/Mywork.scss
+++ b/src/components/Mywork/Mywork.scss
@@ -36,7 +36,7 @@
 }
 .tag__item {
   display: inline-block;
-  background-color: $color-blue;
+  background-color: $color-tertiary;
   padding: 0.4rem 1rem;
   border-radius: 2rem;
   color: $white-color;
@@ -93,11 +93,12 @@
 .info__title {
   font-weight: 700;
   font-size: 2.1rem;
-  color: $color-blue;
+  color: $color-tertiary;
 }
 .info__description {
   margin-top: 1rem;
-  color: $dark-grey;
+  color: $color-blue;
+  font-weight: 500;
 }
 .work__header {
   display: flex;
