--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -3,7 +3,6 @@
 .work {
   margin: 10rem 0 1.5rem 0;
   padding-top: 2rem;
-  // border-top: 2px solid $color-blue;
 }
 .work__title {
   font-size: 3rem;
@@ -13,7 +12,7 @@
   padding-bottom: 2rem;
 
   span {
-    color: $color-blue;
+    color: $color-tertiary;
   }
 }
 .work__categories {
