--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -80,7 +80,7 @@
     margin-top: 3rem;
   }
   li {
-    background-color: $color-tertiary;
+    background-color: $color-blue;
     padding: 0.7rem 1rem;
     border-radius: 12px;
     font-size: 1.5rem;
