--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,17 +1,9 @@
 // PRIMARY COLORS
-$white-color: #f5f0f6;
+$white-color: #fff;
 $four-color: rgba(172, 17, 233, 0.274);
-$dark-grey: #000000;
-$color-grey: #f3f3f3;
-//test colors
 $color-blue: #2745c2;
-// $color-bodyBg: #edd3c4;
-$color-bodyBg: #f2d0a9;
-$color-tertiary: #f24236;
+$color-tertiary: #0C120C;
 
-// BORDERS
-$white-border-thin: 1px solid $white-color;
-$white-border-large: 3px solid $white-color;
 
 // FONTS WEIGHT
 $font-weight-regular: 400;
@@ -19,23 +11,13 @@ $font-weight-medium: 500;
 $font-weight-bold: 700;
 
 // FONT FAMILY
-// $font-primary: "Inter", sans-serif;
-// $font-secondary: "Montserrat", sans-serif;
 $font-primary: "Montserrat", sans-serif;
 $font-secondary: "Inter", sans-serif;
 // FONTS SIZE
 $font-heading-1: 4rem;
-$font-heading-2: 2.5rem;
-$font-heading-3: 2rem;
 $font-size-body: 1.8rem;
 $font-size-element: 14px;
 
 // FONT LINE HEIGHT
-$font-line-height-heading-1: 48px;
-$font-line-height-heading-2: 40px;
-$font-line-height-heading-3: 26px;
 $font-line-height-body: 26px;
 
-// FONT LETTER SPACING
-$font-letter-spacing-middle: 2px;
-$font-letter-spacing-high: 5px;
