--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -43,8 +43,8 @@ body {
   font-weight: $font-weight-regular;
   line-height: $font-line-height-body;
   font-size: $font-size-body;
-  background-color: $color-bodyBg;
-  color: $color-blue;
+  background-color: $white-color;
+  color: $color-tertiary;
   margin: 0;
   min-height: 100vh;
   font-family: $font-primary;
