--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 10rem;
+  padding: 0 2rem;
   h1 {
     font-size: 3rem;
     color: $color-blue;
@@ -14,7 +16,11 @@
     }
   }
 }
-
+.header__clicked{
+  position: fixed;
+  width: 100%;
+  background-color: $white-color;
+}
 .header--nav {
   &__list {
     display: flex;
@@ -63,7 +69,6 @@
   transform: scale(0);
 }
 .modal-menu {
-  position: relative;
   @include respondMobileFirst(phone) {
     display: none;
   }
@@ -85,25 +90,25 @@
   justify-content: center;
   align-items: center;
 }
-
-.portalModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1050;
-  overflow: hidden;
-  outline: 0;
-  background-color: $white-color;
-  color: $white-color;
-  font-size: 3rem;
-  display: flex;
-  justify-content: center;
-  @include respondMobileFirst(phone) {
-    display: none;
-  }
-}
+//
+// .portalModal {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   z-index: 50;
+//   overflow: hidden;
+//   outline: 0;
+//   background-color: $white-color;
+//   color: $white-color;
+//   font-size: 3rem;
+//   display: flex;
+//   justify-content: center;
+//   @include respondMobileFirst(phone) {
+//     display: none;
+//   }
+// }
 .burger--item {
   padding: 1.5rem;
   transition: all 0.3s ease-in-out;
@@ -111,20 +116,20 @@
     transform: scale(1.1);
   }
 }
-.container__modal {
-  flex-direction: column;
-  padding: 4rem;
-  width: 80%;
-  height: min-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 3rem;
-  margin-top: 8rem;
-  color: $color-tertiary;
-  // justify-content: space-around;
-  background-color: white;
-}
-.align-end {
-  align-self: flex-end;
-}
+// .container__modal {
+//   flex-direction: column;
+//   padding: 4rem;
+//   width: 80%;
+//   height: min-content;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   border-radius: 3rem;
+//   margin-top: 8rem;
+//   color: $color-tertiary;
+//   // justify-content: space-around;
+//   background-color: white;
+// }
+// .align-end {
+//   align-self: flex-end;
+// }
