--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -10,9 +10,8 @@
   margin: 0 auto;
   text-align: center;
   padding-bottom: 2rem;
-
   span {
-    color: $color-tertiary;
+    color: $color-blue;
   }
 }
 .work__categories {
