--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
 // PRIMARY COLORS
-$white-color: #fff;
+// $white-color: #fff;
+$white-color: #FDFFFC;
 $four-color: rgba(172, 17, 233, 0.274);
 $color-blue: #2745c2;
 $color-tertiary: #0C120C;
