--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -6,8 +6,10 @@
   flex-direction: column;
   margin: 0 0 auto 0;
   margin-top: 10rem;
-  // border-top: 2px solid $color-blue;
   padding-top: 2rem;
+  h2{
+    color: $color-blue;
+  }
 }
 .skills__span {
   font-style: italic;
